--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="./estilo/basico.css">
 </head>
 <body>
+
+  <header class="barra">
+   <span class="mobile">Mobile</span>
+   <span class="tablet">Tablet</span>
+   <span class="desktop">Desktop</span>
+  </header>
+
+
   <button class="btn" onclick="aperte();">Clique aqui</button>
 </body>
 </html>
