--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
    <span class="desktop">Desktop</span>
   </header>
 
+   <section class="conteudo">
+     <button class="btn" onclick="aperte();">Clique aqui</button>
+   </section>
 
-  <button class="btn" onclick="aperte();">Clique aqui</button>
 </body>
 </html>
