--- a/index.html
+++ b/index.html
@@ -8,28 +8,33 @@
     <link rel="stylesheet" href="./estilo/basico.css">
 </head>
 <body>
+    <header class="barra">
+        <span class="mobile">Mobile</span>
+        <span class="tablet">Tablet</span>
+        <span class="desktop">Desktop</span>
+    </header>
+     <section class="conteudo">
+        <div class="botoes">
+        <button class="btn" id="btn1" onclick="abrir_aba(1)">Aba 1</button>
+        <button class="btn" id="btn2" onclick="abrir_aba(2)">Aba 2</button>
+        <button class="btn" id="btn3" onclick="abrir_aba(3)">Aba 3</button>
+        <button class="btn" id="btn4" onclick="abrir_aba(4)">Aba 4</button>
+        <button class="btn" id="btn5" onclick="abrir_aba(5)">Aba 5</button>
+    </div>
+    <div class="abas">
+        <div class="aba" id="aba1">Aba 1</div>
+        <div class="aba" id="aba2">Aba 2 <br>
+          De: <input type="number" id="inicio">
+          até: <input type="number" id="fim"><br>
+          <div id="resultado"><span id="valor"></span></div><br><br>
+          <button onclick="contar()">Contar</button>
+        </div>
+        <div class="aba" id="aba3">Aba 3</div>
+        <div class="aba" id="aba4">Aba 4</div>
+        <div class="aba" id="aba5">Aba 5</div>
+    </div>
+     </section>
 
-  <header class="barra">
-   <span class="mobile">Mobile</span>
-   <span class="tablet">Tablet</span>
-   <span class="desktop">Desktop</span>
-  </header>
 
-  <section class="conteudo">
-   <div class="botoes">
-     <button class="btn" id="btn1" onclick="abrir_aba(1);">Aba 1</button>
-     <button class="btn" id="btn2" onclick="abrir_aba(2);">Aba 2</button>
-     <button class="btn" id="btn3" onclick="abrir_aba(3);">Aba 3</button>
-     <button class="btn" id="btn4" onclick="abrir_aba(4);">Aba 4</button>
-     <button class="btn" id="btn5" onclick="abrir_aba(5);">Aba 5</button>
-   </div>
-   <div class="abas">
-    <div class="aba" id="aba1">Estou na Aba 1</div>
-    <div class="aba" id="aba2">Estou na Aba 2</div>
-    <div class="aba" id="aba3">Estou na Aba 3</div>
-    <div class="aba" id="aba4">Estou na Aba 4</div>
-    <div class="aba" id="aba5">Estou na Aba 5</div>
-   </div>
-  </section>
 </body>
 </html>
